--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
                         android:layout_below="@+id/textView2"
                         android:layout_alignParentStart="true"
                         android:ems="10"
-                        android:hint="diabetter@mail.com"
+                        android:hint="Input your email"
                         android:inputType="textPersonName" />
 
                     <TextView
@@ -81,7 +81,7 @@
                         android:ems="10"
                         android:layout_alignParentStart="true"
                         android:inputType="textPassword"
-                        android:text="password" />
+                        android:hint="Input your password" />
 
                     <Button
                         android:id="@+id/button_login"
