--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,7 +25,7 @@
         android:textSize="22dp" />
 
     <EditText
-        android:id="@+id/et_name"
+        android:id="@+id/et_full_name"
         android:layout_width="270dp"
         android:layout_height="47dp"
         android:layout_alignParentTop="true"
@@ -39,7 +39,7 @@
 
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/et_email"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -52,7 +52,7 @@
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/et_password"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -62,7 +62,7 @@
         android:elevation="6dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="password" />
+        android:hint="Input your password" />
 
     <Button
         android:id="@+id/btn_next_to_birthdate"
