--- a/app/src/main/res/layout/activity_tall.xml
+++ b/app/src/main/res/layout/activity_tall.xml
@@ -25,17 +25,17 @@
         android:text="How Tall Are You" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/et_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="249dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:elevation="4dp"
         android:background="@drawable/rectangle_edit_text"
-        android:text="Name" />
+        android:text="" />
 
     <Button
         android:id="@+id/btn_next_to_weight"
