--- a/app/src/main/res/layout/activity_term_condition.xml
+++ b/app/src/main/res/layout/activity_term_condition.xml
@@ -45,7 +45,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="57dp"
         android:background="@drawable/button_background"
-        android:text="Next" />
+        android:text="SUBMIT" />
 
     <CheckBox
         android:id="@+id/checkBox"
