--- a/app/src/main/res/layout/activity_birthdate.xml
+++ b/app/src/main/res/layout/activity_birthdate.xml
@@ -23,15 +23,21 @@
         android:fontFamily="@font/montserrat_bold"
         android:text="Choose your Birthdate" />
 
-    <CalendarView
-        android:id="@+id/calendarView3"
-        android:layout_width="wrap_content"
-        android:layout_height="310dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="117dp"
-        android:background="@drawable/rectangle_edit_text"
-        android:elevation="3dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical">
+        <CalendarView
+            android:id="@+id/calendarView3"
+            android:layout_margin="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rectangle_edit_text"
+            android:elevation="3dp" />
+
+    </RelativeLayout>
+
+
 
     <Button
         android:id="@+id/btn_next_to_tall"
