--- a/app/src/main/res/layout/activity_gender.xml
+++ b/app/src/main/res/layout/activity_gender.xml
@@ -24,36 +24,44 @@
         android:fontFamily="@font/montserrat_bold"
         android:text="Which one are you?" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical">
+
+        <Button
+            android:id="@+id/btn_male"
+            android:layout_alignParentLeft="true"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/gender_male" />
+
+        <Button
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:id="@+id/btn_female"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            android:background="@drawable/gender_female" />
+
+    </RelativeLayout>
+
 
 
     <Button
-        android:id="@+id/btn_next_to_aktifitas"
+        android:id="@+id/btn_next_to_birthdate"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:textColor="#ffffff"
         android:fontFamily="@font/montserrat_bold"
         android:textSize="15dp"
-        android:layout_marginBottom="159dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="57dp"
         android:background="@drawable/button_background"
         android:text="Next" />
 
-    <Button
-        android:id="@+id/btn_male"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView6"
-        android:layout_marginTop="237dp"
-        android:text="Button" />
 
-    <Button
-        android:id="@+id/btn_female"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView6"
-        android:layout_alignTop="@+id/btn_male"
-        android:text="Button" />
 
 </RelativeLayout>
