--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:id="@+id/toolbar_register"></android.support.v7.widget.Toolbar>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_identity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -24,48 +24,50 @@
         android:text="Input Your Normalities"
         android:textSize="22dp" />
 
-    <EditText
-        android:id="@+id/et_full_name"
-        android:layout_width="270dp"
-        android:layout_height="47dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="217dp"
-        android:background="@drawable/rectangle_edit_text"
-        android:elevation="4dp"
-        android:ems="10"
-        android:hint="Input your name here"
-        android:inputType="textPersonName"/>
+    <RelativeLayout
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <EditText
+            android:id="@+id/et_full_name"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_height="70dp"
+            android:gravity="center"
+            android:ems="10"
+            android:hint="Input Your Full Name Here"
+            android:background="@drawable/base_list_food" />
+        <EditText
+            android:id="@+id/et_email"
+            android:layout_below="@+id/et_full_name"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_height="70dp"
+            android:gravity="center"
+            android:ems="10"
+            android:hint="Input Your Email Here"
+            android:background="@drawable/base_list_food" />
+        <EditText
+            android:id="@+id/et_password"
+            android:layout_below="@+id/et_email"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_height="70dp"
+            android:gravity="center"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:hint="Input Your Password Here"
+            android:background="@drawable/base_list_food" />
 
 
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="252dp"
-        android:background="@drawable/rectangle_edit_text"
-        android:elevation="6dp"
-        android:ems="10"
-        android:hint="Input your email here"
-        android:inputType="textPersonName" />
+    </RelativeLayout>
 
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="176dp"
-        android:background="@drawable/rectangle_edit_text"
-        android:elevation="6dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="Input your password" />
 
     <Button
-        android:id="@+id/btn_next_to_birthdate"
+        android:id="@+id/btn_next_to_gender"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
@@ -76,6 +78,8 @@
         android:layout_marginBottom="57dp"
         android:background="@drawable/button_background"
         android:text="Next" />
+
+
 
 
 </RelativeLayout>
