--- a/app/src/main/res/layout/activity_jenis_aktivitas.xml
+++ b/app/src/main/res/layout/activity_jenis_aktivitas.xml
@@ -24,79 +24,83 @@
         android:text="Choose Your Activity"
         android:textSize="22dp" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/btn_next_to_term"
-        android:layout_below="@id/textView">
+
         <RelativeLayout
+            android:layout_below="@+id/textView"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="50dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
+            android:layout_height="match_parent">
+
             <Button
+                android:layout_marginLeft="50dp"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/btn_istirahat"
-                android:layout_width="141dp"
-                android:layout_height="134dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/istirahat"
-                >
-            </Button>
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:background="@drawable/istirahat"></Button>
+
             <Button
+                android:layout_alignParentRight="true"
                 android:id="@+id/btn_ringan"
-                android:layout_below="@id/btn_istirahat"
-                android:layout_width="141dp"
-                android:layout_height="134dp"
-                android:layout_margin="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="50dp"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:background="@drawable/ringan"
                 >
             </Button>
             <Button
+                android:layout_marginLeft="50dp"
                 android:id="@+id/btn_sedang"
-                android:layout_below="@id/btn_ringan"
-                android:layout_width="141dp"
-                android:layout_height="134dp"
-                android:layout_margin="10dp"
+                android:layout_below="@id/btn_istirahat"
+                android:layout_marginBottom="5dp"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:background="@drawable/sedang"
                 >
             </Button>
             <Button
                 android:id="@+id/btn_berat"
-                android:layout_below="@id/btn_sedang"
-                android:layout_width="141dp"
-                android:layout_height="134dp"
-                android:layout_margin="10dp"
+                android:layout_marginRight="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/btn_ringan"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:background="@drawable/berat"
                 >
             </Button>
-            <Button
-                android:id="@+id/btn_sangat_berat"
-                android:layout_below="@id/btn_berat"
-                android:layout_width="141dp"
-                android:layout_height="134dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/sangat_berat"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btn_sedang"
+                android:gravity="center"
                 >
-            </Button>
+                <Button
+                    android:id="@+id/btn_sangat_berat"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/sangat_berat"
+                    >
+                </Button>
+            </RelativeLayout>
+
 
         </RelativeLayout>
 
-    </ScrollView>
-
-
-    <Button
-        android:id="@+id/btn_next_to_term"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:fontFamily="@font/montserrat_bold"
-        android:textSize="15dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="57dp"
-        android:background="@drawable/button_background"
-        android:text="Next" />
+<!--    <Button-->
+<!--        android:id="@+id/btn_next_to_term"-->
+<!--        android:layout_width="270dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textColor="#ffffff"-->
+<!--        android:fontFamily="@font/montserrat_bold"-->
+<!--        android:textSize="15dp"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginBottom="57dp"-->
+<!--        android:background="@drawable/button_background"-->
+<!--        android:text="Next" />-->
 
 
 </RelativeLayout>
