--- a/app/src/main/res/layout/activity_edit_food.xml
+++ b/app/src/main/res/layout/activity_edit_food.xml
@@ -4,24 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edit_qty_food">
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="118dp"
-        android:textSize="22dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:textColor="#FFA200"
-        android:text="How many gram you eat?" />
-
+    tools:context=".editFoodActivity">
 
     <RelativeLayout
         android:id="@+id/rl_food"
-        android:layout_below="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -102,8 +88,5 @@
         android:layout_marginBottom="57dp"
         android:background="@drawable/button_background"
         android:text="Add Food" />
-
-
-
 
 </RelativeLayout>
