--- a/app/src/main/res/layout/activity_gender.xml
+++ b/app/src/main/res/layout/activity_gender.xml
@@ -49,18 +49,18 @@
 
 
 
-    <Button
-        android:id="@+id/btn_next_to_birthdate"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:fontFamily="@font/montserrat_bold"
-        android:textSize="15dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="57dp"
-        android:background="@drawable/button_background"
-        android:text="Next" />
+<!--    <Button-->
+<!--        android:id="@+id/btn_next_to_birthdate"-->
+<!--        android:layout_width="270dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textColor="#ffffff"-->
+<!--        android:fontFamily="@font/montserrat_bold"-->
+<!--        android:textSize="15dp"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginBottom="57dp"-->
+<!--        android:background="@drawable/button_background"-->
+<!--        android:text="Next" />-->
 
 
 
