--- a/app/src/main/res/layout/add_food.xml
+++ b/app/src/main/res/layout/add_food.xml
@@ -37,6 +37,16 @@
                 android:textStyle="bold"
                 android:layout_marginBottom="8dp"
                 />
+
+            <TextView
+                android:id="@+id/tv_editFood"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="32dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_food"/>
+
             <android.support.v7.widget.RecyclerView
                 android:layout_marginLeft="32dp"
                 android:id="@+id/rv_list_makanan"
