--- a/app/src/main/res/layout/list_food.xml
+++ b/app/src/main/res/layout/list_food.xml
@@ -5,32 +5,63 @@
     android:layout_height="wrap_content"
     android:id="@+id/list_food_layout">
 
-
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal"
-        android:background="@drawable/base_list_food"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:layout_height="100dp"
+        android:background="@drawable/rectangle_edit_text"
+        android:elevation="8dp"
+        android:layout_margin="10dp"
         >
 
         <TextView
             android:id="@+id/text_view_food_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:textColor="#000000"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="20dp"
+            android:textSize="18dp"
             android:text="Food Name" />
 
         <TextView
             android:id="@+id/text_view_calories"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/text_view_food_name"
-            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:layout_toLeftOf="@id/text_view"
+            android:layout_marginRight="10dp"
+            android:text="30" />
+
+        <TextView
+            android:id="@+id/text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="15dp"
+            android:textColor="#000000"
+            android:layout_marginRight="30dp"
+            android:textSize="18dp"
             android:gravity="right"
-            android:text="Calories" />
-    </LinearLayout>
+            android:text="Cal"/>
+
+        <TextView
+            android:id="@+id/tv_addFood"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:text="Add"
+            android:gravity="center"
+            android:fontFamily="@font/montserrat_bold"
+            android:background="@drawable/button_background"
+            android:layout_below="@id/text_view_calories"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="10dp"
+            android:textColor="#FFFFFF"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
+            />
+    </RelativeLayout>
 
 </RelativeLayout>
