--- a/app/src/main/res/layout/activity_menu_makanan.xml
+++ b/app/src/main/res/layout/activity_menu_makanan.xml
@@ -21,12 +21,18 @@
         android:layout_below="@id/toolbar_food_list"
         android:background="@drawable/base_search"
         ></SearchView>
-
+    <Button
+        android:id="@+id/btn_confirm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20px"
+        android:text="Confirm"
+        android:layout_below="@id/sv_food"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/sv_food">
+        android:layout_below="@id/btn_confirm">
     </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
