--- a/app/src/main/res/layout/list_food.xml
+++ b/app/src/main/res/layout/list_food.xml
@@ -45,7 +45,19 @@
             android:textSize="18dp"
             android:gravity="right"
             android:text="Cal"/>
-
+        <EditText
+            android:id="@+id/ed_serving_cal"
+            android:text="12321"
+            android:layout_below="@id/text_view_calories"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="gram"-->
+<!--            android:layout_toEndOf="@+id/ed_serving_cal"-->
+<!--            android:layout_below="@id/text_view_calories"/>-->
         <TextView
             android:id="@+id/tv_addFood"
             android:layout_width="95dp"
@@ -61,6 +73,24 @@
             android:textColor="#FFFFFF"
             android:paddingLeft="32dp"
             android:paddingRight="32dp"
+            android:visibility="visible"
+            />
+        <TextView
+            android:id="@+id/tv_rmFood"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:text="x"
+            android:gravity="center"
+            android:fontFamily="@font/montserrat_bold"
+            android:background="@drawable/button_background"
+            android:layout_below="@id/text_view_calories"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="10dp"
+            android:textColor="#FFFFFF"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
+            android:visibility="invisible"
             />
     </RelativeLayout>
 
