--- a/app/src/main/res/layout/list_food.xml
+++ b/app/src/main/res/layout/list_food.xml
@@ -48,8 +48,9 @@
         <EditText
             android:id="@+id/ed_serving_cal"
             android:text="0"
-            android:layout_below="@id/text_view_calories"
-            android:layout_width="200dp"
+            android:layout_below="@id/text_view_food_name"
+            android:layout_width="100dp"
+            android:layout_marginLeft="20dp"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:visibility="invisible"/>
@@ -78,7 +79,7 @@
             />
         <TextView
             android:id="@+id/tv_rmFood"
-            android:layout_width="95dp"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:text="x"
             android:gravity="center"
