--- a/app/src/main/res/layout/add_food.xml
+++ b/app/src/main/res/layout/add_food.xml
@@ -54,6 +54,7 @@
                 android:layout_height="126dp"
                 android:layout_below="@+id/tv_title"
                 android:layout_marginBottom="16dp"
+                android:layout_marginRight="20dp"
                 ></android.support.v7.widget.RecyclerView>
 
             <TextView
