--- a/app/src/main/res/layout/add_food.xml
+++ b/app/src/main/res/layout/add_food.xml
@@ -78,9 +78,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
+                android:id="@+id/tv_total_cals"
                 android:layout_below="@+id/rv_list_makanan_choosen"
                 android:textColor="#000000"
-                android:text="0"
+                android:text="10"
                 android:paddingRight="10dp"
                 android:layout_toLeftOf="@+id/tv_cal2"
                 android:layout_width="wrap_content"
