--- a/app/src/main/res/layout/fragment_quest.xml
+++ b/app/src/main/res/layout/fragment_quest.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".QuestFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+        <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            app:tabTextColor="#000000"
+            android:id="@+id/tab_quest"
+            app:tabIndicatorHeight="2dp"
+            app:tabMode="fixed"
+            app:tabGravity="fill">
+        </android.support.design.widget.TabLayout>
+
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="INI HALAMAN QUEST"/>
+        android:id="@+id/vp_quest">
 
-</FrameLayout>
+    </android.support.v4.view.ViewPager>
+
+</LinearLayout>
