--- a/app/src/main/res/layout/activity_menu_makanan.xml
+++ b/app/src/main/res/layout/activity_menu_makanan.xml
@@ -18,17 +18,20 @@
         android:layout_height="50dp"
         android:layout_below="@id/toolbar_food_list"
         android:background="@drawable/base_search">
-        <SearchView
-            android:id="@+id/sv_food"
-            android:paddingLeft="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="fill"
-            ></SearchView>
+<!--        <SearchView-->
+<!--            android:id="@+id/sv_food"-->
+<!--            android:paddingLeft="20dp"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="fill"-->
+<!--            ></SearchView>-->
 
     </RelativeLayout>
 
     <Button
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,13 +39,14 @@
         android:text="Confirm"
         android:fontFamily="@font/montserrat_bold"
         android:textColor="#FFFFFF"
-        android:background="@drawable/button_background"
-        android:layout_below="@id/rl_search"/>
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/button_background" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
+        android:layout_below="@+id/rl_search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/btn_confirm">
+        android:layout_above="@+id/btn_confirm"
+        android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
