--- a/app/src/main/res/layout/list_food.xml
+++ b/app/src/main/res/layout/list_food.xml
@@ -54,6 +54,15 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:visibility="invisible"/>
+
+        <TextView
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:layout_below="@id/text_view_food_name"
+            android:layout_toRightOf="@+id/ed_serving_cal"
+            android:text="Gram"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 <!--        <TextView-->
 <!--            android:layout_width="wrap_content"-->
 <!--            android:layout_height="wrap_content"-->
